--- a/app/src/main/res/layout/activity_app.xml
+++ b/app/src/main/res/layout/activity_app.xml
@@ -10,10 +10,11 @@
         android:id="@+id/logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="116dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="208dp"
+        android:layout_marginEnd="116dp"
+        android:layout_marginBottom="8dp"
+        android:onClick="onLogoutClicked"
         android:text="logout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
