--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,24 +25,6 @@
             android:hint="@string/userName_hint" />
     </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/Password_Box"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/UserName_Box">
-
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/Password_Input"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/password_hint" />
-    </android.support.design.widget.TextInputLayout>
-
     <Button
         android:id="@+id/Login_Button"
         android:layout_width="wrap_content"
@@ -54,7 +36,7 @@
         android:text="Login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Password_Box" />
+        app:layout_constraintTop_toBottomOf="@+id/Password_Input" />
 
     <Button
         android:id="@+id/Cancel_Button"
@@ -69,5 +51,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/Login_Button"
-        app:layout_constraintTop_toBottomOf="@+id/Password_Box" />
+        app:layout_constraintTop_toBottomOf="@+id/Password_Input" />
+
+    <EditText
+        android:id="@+id/Password_Input"
+        android:layout_width="367dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="68dp"
+        android:layout_marginEnd="8dp"
+        android:ems="10"
+        android:hint="@string/password_hint"
+        android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/UserName_Box" />
 </android.support.constraint.ConstraintLayout>
