--- a/app/src/main/res/layout/activity_local_employee.xml
+++ b/app/src/main/res/layout/activity_local_employee.xml
@@ -27,23 +27,31 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="8dp"
         android:onClick="onLogoutClicked"
-        android:text="Logout"
+        android:text="@string/logout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.094"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Local_Employee_Tex" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/ViewLocationButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
         android:onClick="onViewLocationLocalEmployeeOnPress"
-        android:text="View Locations"
+        android:text="@string/view_locations"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.093"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/LE_Logout_Button" />
+
+    <Button
+        android:id="@+id/AddDonationButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/add_donation"
+        tools:layout_editor_absoluteX="57dp"
+        tools:layout_editor_absoluteY="258dp" />
 </android.support.constraint.ConstraintLayout>
