--- a/app/src/main/res/layout/activity_manager.xml
+++ b/app/src/main/res/layout/activity_manager.xml
@@ -10,14 +10,10 @@
         android:id="@+id/Mangager_Logout_Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="8dp"
         android:onClick="onLogoutClicked"
-        android:text="Logout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Manager_Text" />
+        android:text="@string/logout"
+        tools:layout_editor_absoluteX="136dp"
+        tools:layout_editor_absoluteY="87dp" />
 
     <TextView
         android:id="@+id/Manager_Text"
@@ -40,7 +36,7 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="8dp"
         android:onClick="onViewLocationManagerOnPress"
-        android:text="View Locations"
+        android:text="@string/view_locations"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Mangager_Logout_Button" />
