--- a/app/src/main/res/layout/activity_local_employee.xml
+++ b/app/src/main/res/layout/activity_local_employee.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="8dp"
-        android:text="Local Employee Page"
+        android:text="@string/local_employee_page"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.103"
         app:layout_constraintStart_toStartOf="parent"
