--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="136dp"
         android:onClick="onLoginClicked"
-        android:text="Login"
+        android:text="@string/login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iRPDescription"
@@ -29,7 +29,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="136dp"
         android:onClick="onRegistrationClicked"
-        android:text="Registration"
+        android:text="@string/registration"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.306"
@@ -44,7 +44,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/holtwood_one_sc"
-        android:text="iRP"
+        android:text="@string/irp"
         android:textSize="100sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
@@ -55,9 +55,9 @@
         android:id="@+id/iRPDescription"
         android:layout_width="wrap_content"
         android:layout_height="31dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="an internal resource planning app"
+        android:layout_marginEnd="8dp"
+        android:text="@string/irp_decription"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.507"
